using System;
using System.Collections.Generic;
using System.Text;

namespace POOII_Module05_Demeter_TellDontAsk_Console
{
    public class Cercle
    {
        public Point3d Centre { get; set; }
        public float Rayon { get; set; }
    }
}
