namespace POOII_Module12_PreparationCours.Exemple2
{
    public interface IFormeGeometrique
    {
    }
}