using System;
using System.Collections.Generic;
using System.Text;

namespace POOII_Module12_PreparationCours.Exemple2
{
    public class Rectangle : IFormeGeometrique
    {
    }
}
